# Game-2048

./: .gitignore  CMakeLists.txt  main.cpp
